Updated the wind method, updating the records method too.